--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-firebase-hooks": "^3.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-paper": "^4.8.1",
+    "react-native-stopwatch-timer": "0.0.21",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.16.3"
   },
